# computer

./: .gitignore  .gitlab-ci.yml  Dockerfile  HOW_TO_RUN.md  README.md  build-internal.sh  build.sh  docker-compose-app-internal.yml  docker-compose-app.yml  docker-compose-dev.yml  docker-compose.yml  docker-kafka.yml  dummy.gitlab-ci.yml.txt  snowflake.sql
compute/: .env.example  .env.high-scale  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
compute/chain/: __init__.py  auth.py  ingest.py  schema.py
compute/config/: __init__.py  config.py
compute/core/: __init__.py  backfill_manager.py  catalog_health_worker.py  chain_engine.py  database.py  db_utils.py  dlq_manager.py  dlq_recovery.py  engine.py  error_sanitizer.py  event_handler.py  exceptions.py  filter_sql.py  kafka_config.py  kafka_schema.py  kafka_schema_tracker.py  manager.py  models.py  notification.py  record_router.py  repository.py  runtime_health.py  runtime_metrics.py  schema_validator.py  security.py  timezone.py
compute/destinations/: __init__.py  base.py  kafka.py  postgresql.py  rosetta.py
compute/docs/: DATABASE_CONNECTION_TROUBLESHOOTING.md  DEBEZIUM_TROUBLESHOOTING.md  PERFORMANCE_ANALYSIS.md  SNOWFLAKE_TIMEOUT_CONFIGURATION.md
compute/examples/: custom_sql_join_example.py  dlq_example.py
compute/scripts/: monitor_performance.py  verify_duckdb_attachment.py
compute/sources/: __init__.py  base.py  kafka_runner.py  postgres_runner.py  postgresql.py  runner_base.py
compute/tests/: conftest.py  test_backfill_manager.py  test_chain_ingest.py  (+19 more)
(+605 files in other folders)
