[project]
name = "rosetta-compute"
version = "0.1.0"
description = "Modular CDC engine for data streaming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jpype1>=1.6.0",
    'pydbzengine @git+https://github.com/memiiso/pydbzengine.git',
    "psycopg2-binary>=2.9.9",
    "duckdb==1.5.1",
    "python-dotenv>=1.0.0",
    "cryptography==42.0.0",
    "httpx==0.28.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyjwt>=2.11.0",
    "pandas>=3.0.0",
    "pyarrow>=15.0.0",
    "redis>=5.0.0",
    "pytz>=2025.2",
    "confluent-kafka>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "fakeredis>=2.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: pure unit tests (no I/O)",
    "integration: tests requiring external services",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "examples/*",
    "scripts/*",
    "migrations/*",
    "tmp/*",
]

[project.scripts]
rosetta-compute = "compute.main:main"

[tool.uv]
native-tls = true
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]
